# Learn_IDRecognize

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ck.traineddata
app/src/main/cpp/: CMakeLists.txt  common.h  native-lib.cpp  utils.cpp  utils.h
app/src/main/java/cn/bsd/learn/idrecognize/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
